yaml/base/image-acquirer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"mosquitto"}]'
  labels:
    app: image-acquirer
  name: image-acquirer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-acquirer
  strategy: {}
  template:
    metadata:
      labels:
        app: image-acquirer
    spec:
      containers:
      - image: ghcr.io/kwkoo/image-acquirer
        name: image-acquirer
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            nvidia.com/gpu: 1
status: {}
