yaml/base/image-acquirer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-acquirer
  name: image-acquirer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: image-acquirer
status:
  loadBalancer: {}
