yaml/base/image-acquirer/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-acquirer
  name: image-acquirer
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 8080
  to:
    name: image-acquirer
    weight: null
status: {}
